Reactivating compilation flag -Werror (but still, there are some spotbugs issues to fix)